--- a/table.css
+++ b/table.css
@@ -56,7 +56,7 @@ body
 {
     background-image: url(https://i.pinimg.com/originals/c5/68/e9/c568e9737cdd416743c39f7ba293921f.jpg);
     background-repeat: no-repeat;
-    background-size: 1300px 680px;
+    background-size: cover;
     margin-top: 3%;
     
 }
