--- a/table.css
+++ b/table.css
@@ -1,6 +1,6 @@
 table
 {
-    color: blue;
+    color: rgb(179, 134, 10);
     font-family: 'Times New Roman', Times, serif;
     font-weight: 700;
     
@@ -25,7 +25,7 @@ textarea
 
 h3
 {
-    color: rgb(165, 157, 42);
+    color: rgb(194, 191, 28);
     font-family: 'Times New Roman', Times, serif;
     font-weight: bolder;
     font-size: x-large;
@@ -54,9 +54,9 @@ center
 }
 body
 {
-    background-image: url(https://i.pinimg.com/originals/c5/68/e9/c568e9737cdd416743c39f7ba293921f.jpg);
+    background-image: url(https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700437808.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 1300px 680px;
     margin-top: 3%;
     
 }
